<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wooden" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/home" />

                <TextView
                    android:id="@+id/home_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/default_number" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addFourForHome"
                    android:text="@string/home_run" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForHome"
                    android:text="@string/rounder" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForHome"
                    android:text="@string/half_rounder" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/away" />

                <TextView
                    android:id="@+id/away_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/default_number" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addFourForAway"
                    android:text="@string/home_run" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForAway"
                    android:text="@string/rounder" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForAway"
                    android:text="@string/half_rounder" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#953B2A12"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textSize="24dp"
                android:text="@string/battle"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/strikes"
                    style="@style/OutButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="addOneStrike"
                    android:text="@string/three_strikes" />

                <TextView
                    android:id="@+id/total_strikes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/OutNumber"
                    android:text="@string/default_number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/OutButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="addOneCatch"
                    android:text="@string/caught" />

                <TextView
                    android:id="@+id/total_catches"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/OutNumber"
                    android:text="@string/default_number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/OutButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="addOneStump"
                    android:text="@string/stumped" />

                <TextView
                    android:id="@+id/total_stumps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/OutNumber"
                    android:text="@string/default_number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/total_out"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:layout_marginLeft="4dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/total_out"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_number"
                    style="@style/OutNumber"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="newInnings"
                android:text="New Innings"
                android:backgroundTint="#062538"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="newGame"
        android:text="New Game"
        android:textSize="18sp"
        android:backgroundTint="#296185"/>

</RelativeLayout>